# drone_image_stitch_cpp

./: .gitignore  CMakeLists.txt
docs/: stitch_pipeline_analysis.md
src/: image_loader.cpp  image_loader.hpp  main.cpp  pos_guided_stitcher.cpp  pos_guided_stitcher.hpp  pos_image_grouper.cpp  pos_image_grouper.hpp  pos_reader.cpp  pos_reader.hpp  pos_record.cpp  pos_record.hpp  stitch_app.cpp  stitch_app.hpp  stitch_common.cpp  stitch_common.hpp  stitch_config.cpp  stitch_config.hpp  stitch_global.cpp  stitch_global.hpp  stitch_pipeline.cpp  stitch_pipeline.hpp  stitch_robust.cpp  stitch_robust.hpp  visual_flight_grouper.cpp  visual_flight_grouper.hpp
